# CommBadge

./: readme.md
.claude/: settings.local.json
arduino_mic_test/: arduino_mic_test.ino
comm_badge/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
comm_badge/components/audio_service/: CMakeLists.txt  audio_service.c  audio_service.h
comm_badge/components/button_service/: CMakeLists.txt  button_service.c  button_service.h
comm_badge/components/feedback_service/: CMakeLists.txt  feedback_service.c  feedback_service.h
comm_badge/components/playback_service/: CMakeLists.txt  playback_service.c  playback_service.h
comm_badge/components/state_machine/: CMakeLists.txt  state_machine.c  state_machine.h
comm_badge/components/storage_service/: CMakeLists.txt  storage_service.c  storage_service.h
comm_badge/main/: CMakeLists.txt  app_main.c  config.h
